Issue #84: Open shifts scrollable (#90)

--- a/client/src/components/Calendar/OpenShiftsCal.css
+++ b/client/src/components/Calendar/OpenShiftsCal.css
@@ -112,11 +112,11 @@
   color: black;
   text-align: center;
 }
-/* #frontWords {
+#frontWords1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-} */
+}
 #libtag1 {
   display: flex;
   font-weight: lighter;
@@ -202,4 +202,26 @@
   display: block;
   width: 100%;
   line-height: 100%;
+}
+.arrows {
+  margin-top: 3%;
+  margin-left: 30%;
+  display: flex;
+  justify-content: space-between;
+  width: 15%;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+}
+
+.buttonLeftArrow {
+  border: none;
+  background-color: #f5f5fd;
+  cursor: pointer;
+}
+
+.buttonRightArrow {
+  border: none;
+  background-color: #f5f5fd;
+  cursor: pointer;
 }
